k3s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: shuttle
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
